# AdventOfCode

./: .gitignore  README.md  utils.h
2015/: README.md
2015/2/: main.py
2015/CPP/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp  day4.cpp  utils.h
2015/CPP/input/: day4
2015/Godot/: MainMenu.tscn  project.godot
2021/: README.md
2021/1/: main.py
2021/10/: main.py
2021/4/: main.py
2021/6/: main.py
2021/9/: main.py
2022/: icon.png.import  project.godot
2022/Godot/: project.godot
2022/puzzle_input/: day1info.json
2022/scenes/: 3DMode.tscn  Day1.tscn  Day10.tscn  Day11.tscn  Day2.tscn  Day3.tscn  Day4.tscn  Day5.tscn  Day6.tscn  Day7.tscn  Day8.tscn  Day9.tscn  MainMenu.tscn
2022/scripts/: Day10Controller.gd  Day11Controller.gd  Day1Controller.gd  Day2Controller.gd  Day3Controller.gd  Day4Controller.gd  Day5Controller.gd  Day6Controller.gd  Day7Controller.gd  Day8Controller.gd  Day9Controller.gd  MainMenuController.gd  utils.gd
2024/: CMakeLists.txt  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  utils.h
2025/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  day1  day1.cpp  day2  day2.cpp  day3  day3.cpp  day4.cpp  day5.cpp  day6.cpp  range.h
AOCExplorer/: Aoc Explorer.csproj  Aoc Explorer.sln  main.tscn  mainController.cs  project.godot
AoCPP/: CMakeLists.txt  daybase.h  main.cpp
AoCPP/2025/: 2025.h  2025day1.cpp
AoCPP/utils/: utils.cpp  utils.h  utiltypes.h
UnityAoC/: UnityAoC.sln
UnityAoC/ProjectSettings/: ProjectSettings.asset
(+94 files in other folders)
